syntax = "proto3";

package deploy.v1;

option go_package = "github.com/powertoolsdev/mono/pkg/types/components/deploy/v1";

message JobConfig {
  string image_url = 1;
  string tag = 2;
  string cmd = 3;
}
